--- a/index.css
+++ b/index.css
@@ -4,13 +4,13 @@
     box-sizing: border-box;
 }
 
-html, body, #root, svg {
+html, body, #page, #page > svg {
     width: 100%;
     height: 100%;
     overflow: hidden;
 }
 
-svg {
+#page > svg {
     max-width: 100vw;
     max-height: 100vh;
 }
