--- a/index.css
+++ b/index.css
@@ -5,12 +5,11 @@
 }
 
 html, body, #page, #page > svg {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+    width: 100lvw;
+    height: 100lvh;
 }
 
 #page > svg {
-    max-width: 100vw;
-    max-height: 100vh;
+    max-width: 100lvw;
+    max-height: 100lvh;
 }
