add item handling across places

--- a/index.css
+++ b/index.css
@@ -2,9 +2,11 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow: hidden;
+    pointer-events: visiblePainted;
 }
 
-html, body, #page, #page > svg {
+html, body, #viewport, #page, #page > svg {
     width: 100lvw;
     height: 100lvh;
 }
@@ -12,4 +14,24 @@ html, body, #page, #page > svg {
 #page > svg {
     max-width: 100lvw;
     max-height: 100lvh;
+}
+
+
+@keyframes pulseKeyframes {
+    0% {
+     transform: scale(1, 1);
+    }
+
+    50% {
+     transform: scale(1.1, 1.1);
+    }
+
+    100% {
+    transform: scale(1, 1);
+    }
+}
+
+.pulse {
+    transform-origin: 5% 50%;
+    animation: pulseKeyframes 0.7s infinite;
 }
