--- a/index.css
+++ b/index.css
@@ -40,14 +40,38 @@ html, body, #viewport, #page, #page > svg {
 .speech-bubble {
     border: 1px #6c69cf solid;
     color: #6c69cf;
-    padding: 10px;
-    border-radius: 30px;
-    margin: 10px;
+    padding: 13px;
+    padding-bottom: 11px;
+    border-radius: 20px;
+    margin: 5px 0;
     background-color: white;
+    transition: opacity 0.5s;
+    flex-shrink: 0;
 }
 .speech-bubble.right {
+    width: fit-content;
+    align-self: end;
     margin-left: 100px;
 }
 .speech-bubble.left {
+    width: fit-content;
+    align-self: start;
     margin-right: 100px;
+}
+
+.dialog-container-middle, .dialog-container-inner {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.dialog-container-shadow {
+    z-index: 10;
+    width: 100%;
+    height: 30px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 90%, rgba(255,255,255,1) 100%);
 }
