--- a/index.css
+++ b/index.css
@@ -49,16 +49,17 @@ html, body, #viewport, #page, #page > svg {
     background-color: white;
     transition: opacity 0.5s;
     flex-shrink: 0;
+    pointer-events: auto;
 }
 .speech-bubble.right {
     width: fit-content;
     align-self: end;
-    margin-left: 100px;
+    margin-left: 30px;
 }
 .speech-bubble.left {
     width: fit-content;
     align-self: start;
-    margin-right: 100px;
+    margin-right: 30px;
 }
 
 .dialog-container-middle, .dialog-container-inner {
@@ -87,4 +88,5 @@ html, body, #viewport, #page, #page > svg {
     display: flex;
     padding: 50px 0;
     gap: 10px;
+    pointer-events: none;
 }
