--- a/index.css
+++ b/index.css
@@ -61,6 +61,11 @@ html, body, #viewport, #page, #page > svg {
     align-self: start;
     margin-right: 30px;
 }
+.speech-bubble.blank {
+    border: none;
+    background: transparent;
+    height: 100px;
+}
 
 .dialog-container-middle, .dialog-container-inner {
     display: flex;
